[project]
name = "langraph-excercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "ipython>=9.3.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langgraph>=0.4.8",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=4.1.0",
]
